feat: add Android App Links assetlinks.json for deep link verification

--- a/firebase.json
+++ b/firebase.json
@@ -2,8 +2,14 @@
   "hosting": {
     "site": "bookbed-website",
     "public": "dist",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "ignore": ["firebase.json", "**/node_modules/**"],
     "headers": [
+      {
+        "source": "/.well-known/assetlinks.json",
+        "headers": [
+          { "key": "Content-Type", "value": "application/json" }
+        ]
+      },
       {
         "source": "/assets/**",
         "headers": [
